@@ -38,3 +38,9 @@ lazy val root = (project in file(".")).settings(
 ).settings(scalariformSettings: _*)
 
 addSbtPlugin("com.earldouglas" % "xsbt-web-plugin" % "3.0.0")
+
+ScriptedPlugin.scriptedSettings
+scriptedLaunchOpts := { scriptedLaunchOpts.value ++
+  Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
+}
+scriptedBufferLog := false
